JSAI/error/src/test/resources/base/expressions_a001.js
var i = 10;
var j = 11;
/* Testing comma separation */
var x = i, j;
print(x);

